[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]

[[example]]
name = "chat-client"
path = "chat/client.rs"

[[example]]
name = "chat-server"
path = "chat/server.rs"

[[example]]
name = "echo-service"
path = "echo/service.rs"

[[example]]
name = "echo-client"
path = "echo/client.rs"

[[example]]
name = "quickstart"
path = "quickstart/quickstart.rs"

[[example]]
name = "weather-persist"
path = "weather/persist.rs"

[[example]]
name = "weather-collect"
path = "weather/collect.rs"

[dependencies]
anyhow = "1.0.81"
ctrlc = "3.4.4"
prost = "0.12"
thiserror = "1.0.58"
tokio = { version = "1.21.2" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zebus = { version = "0.1.0", path = "../zebus", features = ["config-provider"] }
zebus-core = { version = "0.1.0", path = "../zebus-core" }
