[package]
name = "zebus-proto-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.1"
itertools = { version = "0.10", default-features = false, features = ["use_alloc"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "1.0.3", features = [ "extra-traits" ] }

[lib]
proc-macro = true
