[package]
name = "zebus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = { version = "0.9.2", features = ["vendored"] }
gethostname = "0.2.3"
zebus-macros = { version = "0.1.0", path = "../zebus-macros" }
zebus-core = { version = "0.1.0", path = "../zebus-core" }
tokio = { version = "1.21.2", features = ["io-util", "macros", "net", "rt", "sync", "rt-multi-thread", "time"] }
chrono = "0.4.22"
prost = "0.11"
prost-types = "0.11"
thiserror = "1.0.37"
itertools = "0.10.5"
signals2 = "0.3.2"
futures-core = "0.3.25"
tokio-stream = { version = "0.1.11", features = ["sync"] }
pin-project = "1.0.12"
bitflags = "1.3.2"
dyn-clone = "1.0.10"
async-trait = "0.1.69"

[dependencies.uuid]
version = "1.2.0"
features = [
    "v4",
    "fast-rng"
]
