[package]
name = "zebus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = { version = "0.9.2", features = ["vendored"] }
gethostname = "0.2.3"
zebus-macros = { version = "0.1.0", path = "../zebus-macros" }
zebus-core = { version = "0.1.0", path = "../zebus-core" }
tokio = { version = "1.21.2", features = ["io-util", "macros", "net", "rt", "sync", "rt-multi-thread", "time"] }
chrono = "0.4.22"
prost = "0.12"
prost-types = "0.12"
thiserror = "1.0.37"
itertools = "0.10.5"
signals2 = "0.3.2"
futures-core = "0.3.25"
tokio-stream = { version = "0.1.11", features = ["sync"] }
pin-project = "1.0.12"
bitflags = "1.3.2"
dyn-clone = "1.0.10"
async-trait = "0.1.69"
futures-util = "0.3.28"
tower-service = "0.3.2"
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.40"
rand = "0.8.5"
tokio-util = "0.7.10"
serde = { version = "1.0.195", optional = true }
config = { version = "0.13.4", optional = true }
humantime-serde = { version = "1.1.1", optional = true }

[features]
config-provider = ["config", "humantime-serde", "serde"]

[dependencies.uuid]
version = "1.2.0"
features = [
    "v4",
    "fast-rng"
]
